# ANTARIKSH_OPENENV

./: .env.example  Dockerfile  README.md  SETUP.md  inference.py  push_out.txt  pyproject.toml
backend/: main.py  openai_baseline.py  real_data.py  satellite_specs.py
server/: app.py
src/components/: DatabasePanel.tsx  GlobalDashboard.tsx  MissionsPanel.tsx  Satellites.tsx
