[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antariksh-rl"
version = "1.0.0"
description = "Satellite Scheduling RL Environment for OpenEnv"
authors = [
    { name = "Ashish Kumar" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "openai"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]
